<resources>
    <string name="app_name">QuizMaker</string>
    <string name="btn_next">Next</string>
    <string name="btn_back">Prev</string>
    <string name="QuizTitle">QuizMaker</string>
    <string name="submit_btn">Submit</string>
    <string name="title_activity_end_page">EndPage</string>
    <string name="redo_btn">Retry?</string>
    <string name="title_txt">Final Results:</string>
    <string name="title_activity_starting_page">QuizTaker</string>
    <string name="start_btn">Start the Quiz!</string>
    <string name="edit_btn">Edit the Quiz!</string>
    <string name="start_page_text">Press the top button to take the quiz, or the bottom button to edit the quiz data.
    When editing, recall that you can create a new question by pressing the "new question" button, and create a
    true/false question by making a Multiple choice question with two options. </string>
    <string name="ScoreTitle">Score</string>
</resources>
